@@ -20,7 +20,7 @@
         <java.version>1.8</java.version>
         <spring.boot.version>1.4.2.RELEASE</spring.boot.version>
         <spring.boot.eureka.version>1.2.2.RELEASE</spring.boot.eureka.version>
-        <lombok.version>1.18.32</lombok.version>
+        <lombok.version>1.18.28</lombok.version>
     </properties>
     
     <!-- Modules -->
@@ -57,6 +57,7 @@
     <!-- Build Configuration -->
     <build>
         <plugins>
+            <!-- Maven Compiler Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -65,6 +66,10 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <encoding>UTF-8</encoding>
+                    <compilerArgs>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                    </compilerArgs>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
@@ -75,6 +80,7 @@
                 </configuration>
             </plugin>
             
+            <!-- Lombok Maven Plugin -->
             <plugin>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok-maven-plugin</artifactId>
@@ -90,6 +96,7 @@
                 </executions>
             </plugin>
             
+            <!-- Spring Boot Maven Plugin -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
